<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarmain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        android:background="@color/colorPrimary"
        app:elevation="@dimen/appbar_elev"
        />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/mainheight_imgb"
        android:src="@drawable/comb3"
        android:scaleType="centerCrop"
        android:background="@color/background"
        tools:text="APOD"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@id/toolbarmain"
        android:layout_marginTop="@dimen/mainmargintop_imgb"
        android:id="@+id/apod_imgb"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/apodbt"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/mainheight_imgb"
        android:src="@drawable/comb2"
        android:scaleType="centerCrop"
        android:background="@color/background"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mainmargintop_imgb"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/mex_imgb"
        android:clickable="true"
        android:focusable="true"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/main_tvsize"
        android:gravity="center"
        android:background="@color/black"
        android:alpha="0.7"
        android:layout_alignBottom="@+id/apod_imgb"
        android:text="@string/main_apodtv"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/main_tvsize"
        android:gravity="center"
        android:background="@color/black"
        android:alpha="0.7"
        android:layout_alignBottom="@id/mex_imgb"
        android:text="@string/main_mextv"/>

</RelativeLayout>

